--- a/InvoiSync.html
+++ b/InvoiSync.html
@@ -11,26 +11,79 @@
         pdf copies of monthly made invoices, store crucial client data, and 
         produce accurate estimates efficiently">
     <title>InvoiSync Case Study</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
-<body>
+<body class="subpage">
 
     <header>
-        <h1>InvoiSync: A Case Study</h1>
+        <button>Back</button>
     </header>
 
     <main>
-        <!-- Project Overview Section -->
         <section id="overview">
-            <h2>Project Overview</h2>
-            <p>
-                Brief description of the project, its objectives, and the main problem it aimed to solve.
-            </p>
+            <div id="overview-container">
+                <div class="content">
+                    <div id="overview-header">
+                        <h1>Case Study</h1>
+                        <h3 id="project-name">InvoiSync - Invoice Management System</h3>
+                        <h2>My Role</h2>
+                        <ul>
+                            <li>FullStack Developer</li>
+                            <li>UI/UX Designer</li>
+                            <li>Creative Designer</li>
+                        </ul>
+                        <h2>Tools</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>Electron JS</li>
+                            <li>LocalStorage</li>
+                        </ul>
+                        <h2>Year</h2>
+                        <p>Sept. 2023 - Oct. 2023</p>
+                    </div>
+                    <div id="overview-description">
+                        <p> In the competitive landscape of business solutions, 
+                            InvoiSync emerges as a paradigm of innovation and 
+                            efficiency for landscaping services. This case study 
+                            presents a deep dive into InvoiSync, an invoice 
+                            management system meticulously crafted for 'Daniel 
+                            Mendez Landscaping Inc.' Developed within a span of 
+                            just two months, from September to October 2023, this 
+                            project epitomizes the cutting-edge application of web 
+                            technologies in solving real-world business challenges.</p>
+                        <p>As the architect and driving force behind InvoiSync, my role 
+                            encompassed the full spectrum of Full-Stack Development, UI/UX 
+                            Design, and Creative Design. Utilizing a robust tech stack 
+                            comprising HTML, CSS, JavaScript, Electron JS, and LocalStorage, 
+                            I engineered a platform that redefines efficiency in invoice 
+                            management and client data handling for landscaping businesses. 
+                            The sophisticated interface, designed with an acute focus on user 
+                            experience, facilitates seamless navigation and operation, enabling 
+                            users to effortlessly manage invoices, securely store critical 
+                            client information, and generate reliable estimates.</p>
+                        <p>The development of InvoiSync for 'Daniel Mendez Landscaping 
+                            Inc.' is a testament to the transformative power of tailored 
+                            software solutions in specialized business sectors. This case 
+                            study delves into the strategic development process, the technical 
+                            challenges surmounted, and the bespoke solutions deployed. It is 
+                            a compelling narrative of how targeted software development can 
+                            significantly enhance operational efficiency and business growth, 
+                            offering valuable insights for businesses seeking to embark on a 
+                            similar path of digital advancement.</p>
+                    </div>
+                </div>          
+            </div>
         </section>
 
-        <!-- Why & Purpose Section -->
         <section id="purpose">
+            <aside class="vertical-section">
+                <span class="section-number">01</span>
+                <hr>
+                <h2 class="vertical-title">Introduction</h2>
+            </aside>
             <h2>Why and Purpose</h2>
             <p>
                 Describe why you embarked on this project, the needs it addresses, and its importance.
@@ -39,6 +92,11 @@
 
         <!-- Design Choices Section -->
         <section id="design">
+            <aside class="vertical-section">
+                <span class="section-number">03</span>
+                <hr>
+                <h2 class="vertical-title">Showcase</h2>
+            </aside>
             <h2>Design Choices</h2>
             <p>
                 Explain the design choices you made, tools or technologies used, and the rationale behind them.
@@ -47,6 +105,11 @@
 
         <!-- Challenges & Solutions Section -->
         <section id="challenges">
+            <aside class="vertical-section">
+                <span class="section-number">04</span>
+                <hr>
+                <h2 class="vertical-title">Reflection</h2>
+            </aside>
             <h2>Challenges & Solutions</h2>
             <p>
                 Detail any obstacles or challenges faced during the project and how you overcame them.
