--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
   <script src="https://kit.fontawesome.com/5b4b3e0211.js" crossorigin="anonymous"></script>
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <script src="\scripts\scroll.js"></script>
-  <noscript>
-    <link rel="stylesheet" type="text/css" href="no-script.css">
-  </noscript>
 </head>
 
 <body>
   <noscript>
-    This website requires JavaScript to function properly. Please enable JavaScript in your browser settings.
+    <h2>
+      This website requires JavaScript to function properly. Please enable JavaScript in your browser settings.
+    </h2>
   </noscript>
   <svg id="loading-screen" width="1086" height="366" viewBox="0 0 1086 366" fill="none"
     xmlns="http://www.w3.org/2000/svg">
@@ -80,7 +79,7 @@
   <header id="global-header">
     <h1>DEVELOPER <br class="responsive-break"> WEBSITE</h1>
     <nav>
-      <img src="/images/personalLogo.png" alt="personal logo">
+      <img src="/images/personalLogo2.png" alt="personal logo">
       <ul id="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -357,5 +356,4 @@
     </div>
   </footer>
 </body>
-
 </html>
