--- a/InvoiSync.html
+++ b/InvoiSync.html
@@ -1,225 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="InvoiSync Case Study - 
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="InvoiSync Case Study - 
         showcasing the developement of a dedicated desktop application 
         that offers a comprehensive suite of features to manage and create 
         pdf copies of monthly made invoices, store crucial client data, and 
-        produce accurate estimates efficiently"
-    />
-    <title>InvoiSync Case Study</title>
-    <link rel="stylesheet" href="styles/styles.css" />
-  </head>
+        produce accurate estimates efficiently" />
+  <title>InvoiSync Case Study</title>
+  <link rel="stylesheet" href="styles/styles.css" />
+</head>
 
-  <body class="subpage">
-    <header>
-      <button>Back</button>
-    </header>
+<body class="subpage">
+  <header>
+    <button>Back</button>
+  </header>
 
-    <main>
-      <section id="overview">
-        <div id="overview-container">
-          <div class="content">
-            <div id="overview-header">
-              <h1>Case Study</h1>
-              <h3 id="project-name">InvoiSync - Invoice Management System</h3>
-              <h2>My Role</h2>
-              <ul>
-                <li>FullStack Developer</li>
-                <li>UI/UX Designer</li>
-                <li>Creative Designer</li>
-              </ul>
-              <h2>Tools</h2>
-              <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Electron JS</li>
-                <li>LocalStorage</li>
-              </ul>
-              <h2>Year</h2>
-              <p>Sept. 2023 - Oct. 2023</p>
-            </div>
-            <div id="overview-description">
-              <p>
-                In the competitive landscape of business solutions, InvoiSync
-                emerges as a paradigm of innovation and efficiency for
-                landscaping services. This case study presents a deep dive into
-                InvoiSync, an invoice management system meticulously crafted for
-                'Daniel Mendez Landscaping Inc.' Developed within a span of just
-                two months, from September to October 2023, this project
-                epitomizes the cutting-edge application of web technologies in
-                solving real-world business challenges.
-              </p>
-              <p>
-                As the architect and driving force behind InvoiSync, my role
-                encompassed the full spectrum of Full-Stack Development, UI/UX
-                Design, and Creative Design. Utilizing a robust tech stack
-                comprising HTML, CSS, JavaScript, Electron JS, and LocalStorage,
-                I engineered a platform that redefines efficiency in invoice
-                management and client data handling for landscaping businesses.
-                The sophisticated interface, designed with an acute focus on
-                user experience, facilitates seamless navigation and operation,
-                enabling users to effortlessly manage invoices, securely store
-                critical client information, and generate reliable estimates.
-              </p>
-              <p>
-                The development of InvoiSync for 'Daniel Mendez Landscaping
-                Inc.' is a testament to the transformative power of tailored
-                software solutions in specialized business sectors. This case
-                study delves into the strategic development process, the
-                technical challenges surmounted, and the bespoke solutions
-                deployed. It is a compelling narrative of how targeted software
-                development can significantly enhance operational efficiency and
-                business growth, offering valuable insights for businesses
-                seeking to embark on a similar path of digital advancement.
-              </p>
-            </div>
+  <main>
+    <section id="overview">
+      <div id="overview-container">
+        <div class="content">
+          <div id="overview-header">
+            <h1>Case Study</h1>
+            <h3 id="project-name">InvoiSync - Invoice Management System</h3>
+            <h2>My Role</h2>
+            <ul>
+              <li>FullStack Developer</li>
+              <li>UI/UX Designer</li>
+              <li>Creative Designer</li>
+            </ul>
+            <h2>Tools</h2>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>Electron JS</li>
+              <li>LocalStorage</li>
+            </ul>
+            <h2>Year</h2>
+            <p>Sept. 2023 - Oct. 2023</p>
+          </div>
+          <div id="overview-description">
+            <p>
+              In the competitive landscape of business solutions, InvoiSync
+              emerges as a paradigm of innovation and efficiency for
+              landscaping services. This case study presents a deep dive into
+              InvoiSync, an invoice management system meticulously crafted for
+              'Daniel Mendez Landscaping Inc.' Developed within a span of just
+              two months, from September to October 2023, this project
+              epitomizes the cutting-edge application of web technologies in
+              solving real-world business challenges.
+            </p>
+            <p>
+              As the architect and driving force behind InvoiSync, my role
+              encompassed the full spectrum of Full-Stack Development, UI/UX
+              Design, and Creative Design. Utilizing a robust tech stack
+              comprising HTML, CSS, JavaScript, Electron JS, and LocalStorage,
+              I engineered a platform that redefines efficiency in invoice
+              management and client data handling for landscaping businesses.
+              The sophisticated interface, designed with an acute focus on
+              user experience, facilitates seamless navigation and operation,
+              enabling users to effortlessly manage invoices, securely store
+              critical client information, and generate reliable estimates.
+            </p>
+            <p>
+              The development of InvoiSync for 'Daniel Mendez Landscaping
+              Inc.' is a testament to the transformative power of tailored
+              software solutions in specialized business sectors. This case
+              study delves into the strategic development process, the
+              technical challenges surmounted, and the bespoke solutions
+              deployed. It is a compelling narrative of how targeted software
+              development can significantly enhance operational efficiency and
+              business growth, offering valuable insights for businesses
+              seeking to embark on a similar path of digital advancement.
+            </p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="showcase">
-        <img
-          src="/images/invoisync/invoiSync-darkmode-dashboard.PNG"
-          alt="invoisync main dashboard"
-        />
-        <img
-          src="/images/invoisync/add-client-form-validation.PNG"
-          alt="invoisync main dashboard"
-        />
-        <img id="lightvsdarkimg"
-          src="/images/invoisync/lightvsdark.png"
-          alt="invoisync main dashboard"
-        />
-        <img
-          src="/images/invoisync/create-invoice.PNG"
-          alt="invoisync main dashboard"
-        />
-        <img
-          src="/images/invoisync/invoice-format.PNG"
-          alt="invoisync main dashboard"
-        />
-      </section>
+    <section id="showcase">
+      <img src="/images/invoisync/invoiSync-darkmode-dashboard.PNG" alt="invoisync main dashboard" />
+      <img src="/images/invoisync/add-client-form-validation.PNG" alt="invoisync main dashboard" />
+      <img id="lightvsdarkimg" src="/images/invoisync/lightvsdark.png" alt="invoisync main dashboard" />
+      <img src="/images/invoisync/create-invoice.PNG" alt="invoisync main dashboard" />
+      <img src="/images/invoisync/invoice-format.PNG" alt="invoisync main dashboard" />
+    </section>
 
-      <section id="purpose">
-        <aside class="vertical-section">
-          <span class="section-number">01</span>
-          <hr />
-          <h2 class="vertical-title">Showcase</h2>
-        </aside>
-        <div class="content-container">
-          <div class="project">
-            <div class="project-description">
-              <h3>Client Information Management</h3>
-              <p>
-                This section delves into the core functionalities of adding,
-                updating, and deleting client data within InvoiSync. Users can
-                effortlessly input client details into the system, which are
-                then securely stored in LocalStorage. This feature ensures that
-                all client information is easily accessible and modifiable,
-                providing a solid foundation for efficient data management.
-              </p>
-            </div>
+    <section id="explanation">
+      <div class="wrapper-1">
+        <div class="explanation-title">
+          <h2>Explore The Features</h2>
+        </div>
+
+        <div class="col-4">
+          <div class="sq-container">
+            <h3>Client Data Control</h3>
+            <p>
+              Efficient management of adding, updating, and deleting client information with seamless LocalStorage
+              integration.
+            </p>
           </div>
-
-          <div class="project">
-            <div class="project-description">
-              <h3>Dashboard and Utilities</h3>
-              <p>
-                The focus here is on the dynamic dashboard of InvoiSync, which
-                offers a comprehensive view of critical business metrics. Key
-                functionalities include calculating total monthly earnings from
-                clients, tracking payment statuses (due and paid), and
-                generating accurate service estimates. Additionally, the system
-                offers advanced search and filter capabilities for client data,
-                enhancing user convenience. A notable feature is the inclusion
-                of light and dark mode options, catering to user preference and
-                enhancing visual comfort.
-              </p>
-            </div>
+          <div class="sq-container">
+            <h3>Client Data Control</h3>
+            <p>
+              Dynamic interface displaying key business metrics, enhanced by convenient search, filter, and display mode
+              options.
+            </p>
           </div>
-
-          <div class="project">
-            <div class="project-description">
-              <h3>Invoice Generation and Management</h3>
-              <p>
-                This section highlights InvoiSync's sophisticated invoice
-                generation feature. Users can select specific clients from their
-                database and easily add service-specific surcharges. The system
-                then generates and downloads a detailed invoice, automatically
-                organizing it into a designated folder based on the invoice
-                month. This feature streamlines the billing process, ensuring
-                accuracy and organization in financial documentation.
-              </p>
-            </div>
+          <div class="sq-container">
+            <h3>Efficient Invoicing</h3>
+            <p>
+              Streamlined invoice creation and organization, with easy client selection and automated monthly file
+              sorting.
+            </p>
+          </div>
+          <div class="sq-container">
+            <h3>Secure File Storage</h3>
+            <p>
+              Streamlined local storage of monthly folders for easy editing and bookkeeping. Secure and user-friendly
+              file management for efficient data access and organization.
+            </p>
           </div>
         </div>
-      </section>
 
-      <!-- Design Choices Section -->
-      <section id="design">
-        <aside class="vertical-section">
-          <span class="section-number">02</span>
-          <hr />
-          <h2 class="vertical-title">Showcase</h2>
-        </aside>
-      </section>
 
-      <!-- Challenges & Solutions Section -->
-      <section id="challenges">
-        <aside class="vertical-section">
-          <span class="section-number">04</span>
-          <hr />
-          <h2 class="vertical-title">Reflection</h2>
-        </aside>
-        <h2>Challenges & Solutions</h2>
-        <p>
-          Detail any obstacles or challenges faced during the project and how
-          you overcame them.
-        </p>
-      </section>
 
-      <!-- Outcomes & Reflections Section -->
-      <section id="outcomes">
-        <h2>Outcomes & Reflections</h2>
-        <p>
-          Discuss the results of the project, its impact, and any feedback you
-          received. Reflect on what you learned and what you might do
-          differently next time.
-        </p>
-      </section>
 
-      <!-- Gallery or Screenshots Section -->
-      <section id="gallery">
-        <h2>Project Gallery</h2>
-        <!-- Insert images/screenshots of your project -->
-        <img src="path-to-image1.jpg" alt="Description of Image 1" />
-        <img src="path-to-image2.jpg" alt="Description of Image 2" />
-        <!-- ... Add more images as needed ... -->
-      </section>
 
-      <!-- Call to Action or Next Steps -->
-      <section id="cta">
-        <h2>Interested in Collaborating?</h2>
-        <p>
-          Encourage visitors to get in touch, view other projects, or provide a
-          link to the live project or its source code.
-        </p>
-        <a href="https://github.com/B1mendez/Invoice-Management"
-          >View the Project on GitHub</a
-        >
-      </section>
-    </main>
+      </div>
+    </section>
 
-    <footer>
-      <!-- You can add footer content here, like contact information, social media links, etc. -->
-      <p>&copy; 2023 Brian Mendez</p>
-    </footer>
-  </body>
+    <section id="challenges">
+      <h2>Challenges & Solutions</h2>
+      <p>
+        Detail any obstacles or challenges faced during the project and how
+        you overcame them.
+      </p>
+    </section>
+
+    <section id="outcome">=
+      <h2>Outcomes & Reflections</h2>
+      <p>
+        Discuss the results of the project, its impact, and any feedback you
+        received. Reflect on what you learned and what you might do
+        differently next time.
+      </p>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div id="copyright">
+      <span>Created by Brian Mendez</span>
+      <span>© 2023</span>
+    </div>
+  </footer>
+</body>
+
 </html>
