--- a/InvoiSync.html
+++ b/InvoiSync.html
@@ -12,6 +12,8 @@
         produce accurate estimates efficiently" />
   <title>InvoiSync Case Study</title>
   <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="icon" href="/images/invoisync/favicon.ico" type="image/x-icon">
+  <script src="https://kit.fontawesome.com/5b4b3e0211.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="subpage">
@@ -103,6 +105,7 @@
               Efficient management of adding, updating, and deleting client information with seamless LocalStorage
               integration.
             </p>
+            <i class="fa-solid fa-users"></i>
           </div>
           <div class="sq-container">
             <h3>Client Data Control</h3>
@@ -110,6 +113,7 @@
               Dynamic interface displaying key business metrics, enhanced by convenient search, filter, and display mode
               options.
             </p>
+            <i class="fa-solid fa-gauge"></i>
           </div>
           <div class="sq-container">
             <h3>Efficient Invoicing</h3>
@@ -117,6 +121,7 @@
               Streamlined invoice creation and organization, with easy client selection and automated monthly file
               sorting.
             </p>
+            <i class="fa-solid fa-file-invoice"></i>
           </div>
           <div class="sq-container">
             <h3>Secure File Storage</h3>
@@ -124,26 +129,48 @@
               Streamlined local storage of monthly folders for easy editing and bookkeeping. Secure and user-friendly
               file management for efficient data access and organization.
             </p>
+            <i class="fa-solid fa-file-export"></i>
           </div>
         </div>
-
-
-
-
-
       </div>
     </section>
 
     <section id="challenges">
-      <h2>Challenges & Solutions</h2>
-      <p>
-        Detail any obstacles or challenges faced during the project and how
-        you overcame them.
-      </p>
+      <div class="wrapper-2">
+        <h3>Challenges</h3>
+        <ol>
+          <li>Transitioning from Handwritten to Digital: Adapting a client accustomed to 20+ years of handwritten
+            invoicing to a web-based application.</li>
+          <li>Efficiency Over Handwriting: Ensuring the new system improves efficiency and timeliness compared to
+            traditional handwriting.</li>
+          <li>Simplified Design and Functionality: Creating a minimalistic yet modern interface without overwhelming the
+            client.</li>
+          <li>Form and Data Integration: Balancing the complexity of client data integration to avoid future issues.
+          </li>
+          <li>Optimizing Data Management: Managing and optimizing data searching and filtering for a large user base.
+          </li>
+        </ol>
+      </div>
+      <div class="wrapper-2">
+        <h3>Solutions</h3>
+        <ol>
+          <li>User-Centered Design: Conducted prototyping and user interaction studies, integrating icons and imagery
+            for intuitive feature understanding.</li>
+          <li>Streamlined Client Management: Removed unnecessary features and streamlined client addition/deletion
+            processes.</li>
+          <li>Minimalistic Elegance: Designed with minimalism for ease of use while incorporating modern features for an
+            elegant touch.</li>
+          <li>Replicating Existing Processes: Emulated the client's handwritten form layout and functionality in the
+            digital format.</li>
+          <li>Technical Refinement: Conducted extensive research and refactoring for efficient large-scale data
+            management.</li>
+        </ol>
+      </div>
     </section>
 
-    <section id="outcome">=
-      <h2>Outcomes & Reflections</h2>
+
+    <section id="outcome">
+      <h3>Outcomes & Reflections</h3>
       <p>
         Discuss the results of the project, its impact, and any feedback you
         received. Reflect on what you learned and what you might do
