Case study Page Complete

--- a/InvoiSync.html
+++ b/InvoiSync.html
@@ -1,190 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="InvoiSync Case Study - 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="InvoiSync Case Study - 
         showcasing the developement of a dedicated desktop application 
         that offers a comprehensive suite of features to manage and create 
         pdf copies of monthly made invoices, store crucial client data, and 
-        produce accurate estimates efficiently" />
-  <title>InvoiSync Case Study</title>
-  <link rel="stylesheet" href="styles/styles.css" />
-  <link rel="icon" href="/images/invoisync/favicon.ico" type="image/x-icon">
-  <script src="https://kit.fontawesome.com/5b4b3e0211.js" crossorigin="anonymous"></script>
-</head>
+        produce accurate estimates efficiently"
+    />
+    <title>InvoiSync Case Study</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="icon" href="/images/invoisync/favicon.ico" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/5b4b3e0211.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body class="subpage">
-  <header>
-    <button>Back</button>
-  </header>
+  <body class="subpage">
+    <header>
+      <button class="previous-page">
+        <a href="##" onClick="history.go(-1); return false;">Back</a>
+      </button>
+    </header>
 
-  <main>
-    <section id="overview">
-      <div id="overview-container">
-        <div class="content">
-          <div id="overview-header">
-            <h1>Case Study</h1>
-            <h3 id="project-name">InvoiSync - Invoice Management System</h3>
-            <h2>My Role</h2>
-            <ul>
-              <li>FullStack Developer</li>
-              <li>UI/UX Designer</li>
-              <li>Creative Designer</li>
-            </ul>
-            <h2>Tools</h2>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>Electron JS</li>
-              <li>LocalStorage</li>
-            </ul>
-            <h2>Year</h2>
-            <p>Sept. 2023 - Oct. 2023</p>
-          </div>
-          <div id="overview-description">
-            <p>
-              In the competitive landscape of business solutions, InvoiSync
-              emerges as a paradigm of innovation and efficiency for
-              landscaping services. This case study presents a deep dive into
-              InvoiSync, an invoice management system meticulously crafted for
-              'Daniel Mendez Landscaping Inc.' Developed within a span of just
-              two months, from September to October 2023, this project
-              epitomizes the cutting-edge application of web technologies in
-              solving real-world business challenges.
-            </p>
-            <p>
-              As the architect and driving force behind InvoiSync, my role
-              encompassed the full spectrum of Full-Stack Development, UI/UX
-              Design, and Creative Design. Utilizing a robust tech stack
-              comprising HTML, CSS, JavaScript, Electron JS, and LocalStorage,
-              I engineered a platform that redefines efficiency in invoice
-              management and client data handling for landscaping businesses.
-              The sophisticated interface, designed with an acute focus on
-              user experience, facilitates seamless navigation and operation,
-              enabling users to effortlessly manage invoices, securely store
-              critical client information, and generate reliable estimates.
-            </p>
-            <p>
-              The development of InvoiSync for 'Daniel Mendez Landscaping
-              Inc.' is a testament to the transformative power of tailored
-              software solutions in specialized business sectors. This case
-              study delves into the strategic development process, the
-              technical challenges surmounted, and the bespoke solutions
-              deployed. It is a compelling narrative of how targeted software
-              development can significantly enhance operational efficiency and
-              business growth, offering valuable insights for businesses
-              seeking to embark on a similar path of digital advancement.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="showcase">
-      <img src="/images/invoisync/invoiSync-darkmode-dashboard.PNG" alt="invoisync main dashboard" />
-      <img src="/images/invoisync/add-client-form-validation.PNG" alt="invoisync main dashboard" />
-      <img id="lightvsdarkimg" src="/images/invoisync/lightvsdark.png" alt="invoisync main dashboard" />
-      <img src="/images/invoisync/create-invoice.PNG" alt="invoisync main dashboard" />
-      <img src="/images/invoisync/invoice-format.PNG" alt="invoisync main dashboard" />
-    </section>
-
-    <section id="explanation">
-      <div class="wrapper-1">
-        <div class="explanation-title">
-          <h2>Explore The Features</h2>
-        </div>
-
-        <div class="col-4">
-          <div class="sq-container">
-            <h3>Client Data Control</h3>
-            <p>
-              Efficient management of adding, updating, and deleting client information with seamless LocalStorage
-              integration.
-            </p>
-            <i class="fa-solid fa-users"></i>
-          </div>
-          <div class="sq-container">
-            <h3>Client Data Control</h3>
-            <p>
-              Dynamic interface displaying key business metrics, enhanced by convenient search, filter, and display mode
-              options.
-            </p>
-            <i class="fa-solid fa-gauge"></i>
-          </div>
-          <div class="sq-container">
-            <h3>Efficient Invoicing</h3>
-            <p>
-              Streamlined invoice creation and organization, with easy client selection and automated monthly file
-              sorting.
-            </p>
-            <i class="fa-solid fa-file-invoice"></i>
-          </div>
-          <div class="sq-container">
-            <h3>Secure File Storage</h3>
-            <p>
-              Streamlined local storage of monthly folders for easy editing and bookkeeping. Secure and user-friendly
-              file management for efficient data access and organization.
-            </p>
-            <i class="fa-solid fa-file-export"></i>
+    <main>
+      <section id="overview">
+        <div id="overview-container">
+          <div class="content">
+            <div id="overview-header">
+              <h1>Case Study</h1>
+              <h3 id="project-name">InvoiSync - Invoice Management System</h3>
+              <h2>My Role</h2>
+              <ul>
+                <li>FullStack Developer</li>
+                <li>UI/UX Designer</li>
+                <li>Creative Designer</li>
+              </ul>
+              <h2>Tools</h2>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Electron JS</li>
+                <li>LocalStorage</li>
+              </ul>
+              <h2>Year</h2>
+              <p>Sept. 2023 - Oct. 2023</p>
+            </div>
+            <div id="overview-description">
+              <p>
+                In the competitive landscape of business solutions, InvoiSync
+                emerges as a paradigm of innovation and efficiency for
+                landscaping services. This case study presents a deep dive into
+                InvoiSync, an invoice management system meticulously crafted for
+                'Daniel Mendez Landscaping Inc.' Developed within a span of just
+                two months, from September to October 2023, this project
+                epitomizes the cutting-edge application of web technologies in
+                solving real-world business challenges.
+              </p>
+              <p>
+                As the architect and driving force behind InvoiSync, my role
+                encompassed the full spectrum of Full-Stack Development, UI/UX
+                Design, and Creative Design. Utilizing a robust tech stack
+                comprising HTML, CSS, JavaScript, Electron JS, and LocalStorage,
+                I engineered a platform that redefines efficiency in invoice
+                management and client data handling for landscaping businesses.
+                The sophisticated interface, designed with an acute focus on
+                user experience, facilitates seamless navigation and operation,
+                enabling users to effortlessly manage invoices, securely store
+                critical client information, and generate reliable estimates.
+              </p>
+              <p>
+                The development of InvoiSync for 'Daniel Mendez Landscaping
+                Inc.' is a testament to the transformative power of tailored
+                software solutions in specialized business sectors. This case
+                study delves into the strategic development process, the
+                technical challenges surmounted, and the bespoke solutions
+                deployed. It is a compelling narrative of how targeted software
+                development can significantly enhance operational efficiency and
+                business growth, offering valuable insights for businesses
+                seeking to embark on a similar path of digital advancement.
+              </p>
+            </div>
           </div>
         </div>
+      </section>
+
+      <section id="showcase">
+        <img
+          src="/images/invoisync/invoiSync-darkmode-dashboard.PNG"
+          alt="invoisync main dashboard"
+        />
+        <img
+          src="/images/invoisync/add-client-form-validation.PNG"
+          alt="invoisync main dashboard"
+        />
+        <img
+          id="lightvsdarkimg"
+          src="/images/invoisync/lightvsdark.png"
+          alt="invoisync main dashboard"
+        />
+        <img
+          src="/images/invoisync/create-invoice.PNG"
+          alt="invoisync main dashboard"
+        />
+        <img
+          src="/images/invoisync/invoice-format.PNG"
+          alt="invoisync main dashboard"
+        />
+      </section>
+
+      <section id="explanation">
+        <div class="wrapper-1">
+          <div class="explanation-title">
+            <h2>Explore The Features</h2>
+          </div>
+
+          <div class="col-4">
+            <div class="sq-container">
+              <h3>Client Data Control</h3>
+              <p>
+                Efficient management of adding, updating, and deleting client
+                information with seamless LocalStorage integration.
+              </p>
+              <i class="fa-solid fa-users"></i>
+            </div>
+            <div class="sq-container">
+              <h3>Client Data Control</h3>
+              <p>
+                Dynamic interface displaying key business metrics, enhanced by
+                convenient search, filter, and display mode options.
+              </p>
+              <i class="fa-solid fa-gauge"></i>
+            </div>
+            <div class="sq-container">
+              <h3>Efficient Invoicing</h3>
+              <p>
+                Streamlined invoice creation and organization, with easy client
+                selection and automated monthly file sorting.
+              </p>
+              <i class="fa-solid fa-file-invoice"></i>
+            </div>
+            <div class="sq-container">
+              <h3>Secure File Storage</h3>
+              <p>
+                Streamlined local storage of monthly folders for easy editing
+                and bookkeeping. Secure and user-friendly file management for
+                efficient data access and organization.
+              </p>
+              <i class="fa-solid fa-file-export"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="challenges">
+        <div>
+          <h3>Challenges</h3>
+          <ol>
+            <li>
+              Transitioning from Handwritten to Digital: Adapting a client
+              accustomed to 20+ years of handwritten invoicing to a web-based
+              application.
+            </li>
+            <li>
+              Efficiency Over Handwriting: Ensuring the new system improves
+              efficiency and timeliness compared to traditional handwriting.
+            </li>
+            <li>
+              Simplified Design and Functionality: Creating a minimalistic yet
+              modern interface without overwhelming the client.
+            </li>
+            <li>
+              Form and Data Integration: Balancing the complexity of client data
+              integration to avoid future issues.
+            </li>
+            <li>
+              Optimizing Data Management: Managing and optimizing data searching
+              and filtering for a large user base.
+            </li>
+          </ol>
+        </div>
+        <div>
+          <h3>Solutions</h3>
+          <ol>
+            <li>
+              User-Centered Design: Conducted prototyping and user interaction
+              studies, integrating icons and imagery for intuitive feature
+              understanding.
+            </li>
+            <li>
+              Streamlined Client Management: Removed unnecessary features and
+              streamlined client addition/deletion processes.
+            </li>
+            <li>
+              Minimalistic Elegance: Designed with minimalism for ease of use
+              while incorporating modern features for an elegant touch.
+            </li>
+            <li>
+              Replicating Existing Processes: Emulated the client's handwritten
+              form layout and functionality in the digital format.
+            </li>
+            <li>
+              Technical Refinement: Conducted extensive research and refactoring
+              for efficient large-scale data management.
+            </li>
+          </ol>
+        </div>
+      </section>
+
+      <section id="outcome">
+        <h3>Outcomes & Reflections</h3>
+        <p>
+          Creating the tailor-made invoice management software for a small
+          landscaping business was a journey filled with learning curves and
+          triumphs. Despite initial challenges in fully grasping the user story
+          and crafting a bespoke design, the end result was a highly accessible
+          application that not only met but exceeded expectations. This
+          experience sparked an exciting realization: the potential for scaling
+          beyond a single solution. It inspired me to envision developing a
+          versatile service that could cater to the diverse needs of small
+          service companies everywhere. This pivot from a one-off project to a
+          scalable service represents a significant milestone in my journey,
+          highlighting the power of adaptability and the endless possibilities
+          that come with truly understanding and addressing user needs.
+        </p>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div id="copyright">
+        <span>Created by Brian Mendez</span>
+        <span>© 2023</span>
       </div>
-    </section>
-
-    <section id="challenges">
-      <div class="wrapper-2">
-        <h3>Challenges</h3>
-        <ol>
-          <li>Transitioning from Handwritten to Digital: Adapting a client accustomed to 20+ years of handwritten
-            invoicing to a web-based application.</li>
-          <li>Efficiency Over Handwriting: Ensuring the new system improves efficiency and timeliness compared to
-            traditional handwriting.</li>
-          <li>Simplified Design and Functionality: Creating a minimalistic yet modern interface without overwhelming the
-            client.</li>
-          <li>Form and Data Integration: Balancing the complexity of client data integration to avoid future issues.
-          </li>
-          <li>Optimizing Data Management: Managing and optimizing data searching and filtering for a large user base.
-          </li>
-        </ol>
-      </div>
-      <div class="wrapper-2">
-        <h3>Solutions</h3>
-        <ol>
-          <li>User-Centered Design: Conducted prototyping and user interaction studies, integrating icons and imagery
-            for intuitive feature understanding.</li>
-          <li>Streamlined Client Management: Removed unnecessary features and streamlined client addition/deletion
-            processes.</li>
-          <li>Minimalistic Elegance: Designed with minimalism for ease of use while incorporating modern features for an
-            elegant touch.</li>
-          <li>Replicating Existing Processes: Emulated the client's handwritten form layout and functionality in the
-            digital format.</li>
-          <li>Technical Refinement: Conducted extensive research and refactoring for efficient large-scale data
-            management.</li>
-        </ol>
-      </div>
-    </section>
-
-
-    <section id="outcome">
-      <h3>Outcomes & Reflections</h3>
-      <p>
-        Discuss the results of the project, its impact, and any feedback you
-        received. Reflect on what you learned and what you might do
-        differently next time.
-      </p>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div id="copyright">
-      <span>Created by Brian Mendez</span>
-      <span>© 2023</span>
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
