Loading Animation Bug
Loading Animation affecting other pages has been solved by changing the body tag overflow visibility.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="\scripts\scroll.js"></script>
 </head>
 
-<body>
+<body id="index-body">
   <noscript>
     <h2>
       This website requires JavaScript to function properly. Please enable JavaScript in your browser settings.
@@ -199,9 +199,8 @@
               to manage and create pdf copies of monthly made invoices, store crucial client data, and produce accurate
               estimates efficiently. It generates automated monthly invoices specific to clients selected using jsPDF
               API.
-
             </p>
-            <a class="project-link" href="https://github.com/B1mendez/Invoice-Management"
+            <a class="project-link" href="InvoiSync.html"
               aria-label="InvoiSync Project documentation on GitHub">Case Study</a>
           </div>
           <div class="project-img-container">
