--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   deep passion for technology. Explore to learn more about Brian's journey and collaborations.">
   <link rel="stylesheet" href="/styles/styles.css" />
   <script src="https://kit.fontawesome.com/5b4b3e0211.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/images/favicon2.ico" type="image/x-icon">
   <script src="\scripts\scroll.js"></script>
 </head>
 
