Responsive Design Update
updated responsive design on case study pages.

--- a/InvoiSync.html
+++ b/InvoiSync.html
@@ -115,7 +115,7 @@
         />
       </section>
 
-      <section id="explanation">
+      <!-- <section id="explanation">
         <div class="wrapper-1">
           <div class="explanation-title">
             <h2>Explore The Features</h2>
@@ -157,60 +157,62 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section id="challenges">
-        <div>
-          <h3>Challenges</h3>
-          <ol>
-            <li>
-              Transitioning from Handwritten to Digital: Adapting a client
-              accustomed to 20+ years of handwritten invoicing to a web-based
-              application.
-            </li>
-            <li>
-              Efficiency Over Handwriting: Ensuring the new system improves
-              efficiency and timeliness compared to traditional handwriting.
-            </li>
-            <li>
-              Simplified Design and Functionality: Creating a minimalistic yet
-              modern interface without overwhelming the client.
-            </li>
-            <li>
-              Form and Data Integration: Balancing the complexity of client data
-              integration to avoid future issues.
-            </li>
-            <li>
-              Optimizing Data Management: Managing and optimizing data searching
-              and filtering for a large user base.
-            </li>
-          </ol>
-        </div>
-        <div>
-          <h3>Solutions</h3>
-          <ol>
-            <li>
-              User-Centered Design: Conducted prototyping and user interaction
-              studies, integrating icons and imagery for intuitive feature
-              understanding.
-            </li>
-            <li>
-              Streamlined Client Management: Removed unnecessary features and
-              streamlined client addition/deletion processes.
-            </li>
-            <li>
-              Minimalistic Elegance: Designed with minimalism for ease of use
-              while incorporating modern features for an elegant touch.
-            </li>
-            <li>
-              Replicating Existing Processes: Emulated the client's handwritten
-              form layout and functionality in the digital format.
-            </li>
-            <li>
-              Technical Refinement: Conducted extensive research and refactoring
-              for efficient large-scale data management.
-            </li>
-          </ol>
+        <div class="challenge-container">
+          <div>
+            <h3>Challenges</h3>
+            <ol>
+              <li>
+                Transitioning from Handwritten to Digital: Adapting a client
+                accustomed to 20+ years of handwritten invoicing to a web-based
+                application.
+              </li>
+              <li>
+                Efficiency Over Handwriting: Ensuring the new system improves
+                efficiency and timeliness compared to traditional handwriting.
+              </li>
+              <li>
+                Simplified Design and Functionality: Creating a minimalistic yet
+                modern interface without overwhelming the client.
+              </li>
+              <li>
+                Form and Data Integration: Balancing the complexity of client data
+                integration to avoid future issues.
+              </li>
+              <li>
+                Optimizing Data Management: Managing and optimizing data searching
+                and filtering for a large user base.
+              </li>
+            </ol>
+          </div>
+          <div>
+            <h3>Solutions</h3>
+            <ol>
+              <li>
+                User-Centered Design: Conducted prototyping and user interaction
+                studies, integrating icons and imagery for intuitive feature
+                understanding.
+              </li>
+              <li>
+                Streamlined Client Management: Removed unnecessary features and
+                streamlined client addition/deletion processes.
+              </li>
+              <li>
+                Minimalistic Elegance: Designed with minimalism for ease of use
+                while incorporating modern features for an elegant touch.
+              </li>
+              <li>
+                Replicating Existing Processes: Emulated the client's handwritten
+                form layout and functionality in the digital format.
+              </li>
+              <li>
+                Technical Refinement: Conducted extensive research and refactoring
+                for efficient large-scale data management.
+              </li>
+            </ol>
+          </div>
         </div>
       </section>
 
