--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div>
               <span>2022-Present</span>
               <h3>BETTER TIMES TUTORING</h3>
-              <span>FOUNDER & UX/UI DESIGNER</span>
+              <span>FOUNDER & Web Developer</span>
             </div>
           </div>
         </div>
@@ -210,7 +210,7 @@
 
         <div class="project">
           <div class="project-description">
-            <span>2022-Present</span>
+            <span>2022-2023</span>
             <h3>Better Times Tutoring</h3>
             <span>UI/UX Designer</span>
             <p>
@@ -228,30 +228,6 @@
           </div>
         </div>
 
-        <div class="project">
-          <div class="project-description">
-            <span>2022</span>
-            <h3>Frugal</h3>
-            <span>Team Leader</span>
-            <p>
-              A web-based expense tracker, to ensures your financial data stays in the right hands while providing an
-              intuitive
-              interface to manage your expenses seamlessly. Designed with both security and user experience in mind,
-              'Frugal'
-              offers a CRUD functionality allowing users to manage their financial records, a login system for varies
-              accounts,
-              data visualization to provide users with immediate insights into their spending behaviors, and search bar
-              feature
-              and expense categorization.
-            </p>
-            <a class="project-link" href="https://github.com/cse110-fa22-group8/cse110-fa22-group8/tree/main"
-              aria-label="Frugal Project documentation on GitHub">Documentation</a>
-
-          </div>
-          <div class="project-img-container">
-            <img src="/images/TheByte.png" alt="The Byte Logo for Frugal" />
-          </div>
-        </div>
         <div class="project">
           <div class="project-description">
             <span>2023</span>
@@ -295,6 +271,31 @@
           <div class="project-img-container">
             <img src="/images/bitcoin.jpg" alt="The Byte Logo for Frugal" />
           </div>
+        </div>
+      </div>
+      
+      <div class="project">
+        <div class="project-description">
+          <span>2022</span>
+          <h3>Frugal</h3>
+          <span>Team Leader</span>
+          <p>
+            A web-based expense tracker, to ensures your financial data stays in the right hands while providing an
+            intuitive
+            interface to manage your expenses seamlessly. Designed with both security and user experience in mind,
+            'Frugal'
+            offers a CRUD functionality allowing users to manage their financial records, a login system for varies
+            accounts,
+            data visualization to provide users with immediate insights into their spending behaviors, and search bar
+            feature
+            and expense categorization.
+          </p>
+          <a class="project-link" href="https://github.com/cse110-fa22-group8/cse110-fa22-group8/tree/main"
+            aria-label="Frugal Project documentation on GitHub">Documentation</a>
+
+        </div>
+        <div class="project-img-container">
+          <img src="/images/TheByte.png" alt="The Byte Logo for Frugal" />
         </div>
       </div>
     </section>
