Comment in Explanation Section

--- a/InvoiSync.html
+++ b/InvoiSync.html
@@ -115,7 +115,7 @@
         />
       </section>
 
-      <!-- <section id="explanation">
+      <section id="explanation">
         <div class="wrapper-1">
           <div class="explanation-title">
             <h2>Explore The Features</h2>
@@ -150,14 +150,13 @@
               <h3>Secure File Storage</h3>
               <p>
                 Streamlined local storage of monthly folders for easy editing
-                and bookkeeping. Secure and user-friendly file management for
-                efficient data access and organization.
+                and bookkeeping. Secure file management for efficient data access.
               </p>
               <i class="fa-solid fa-file-export"></i>
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section id="challenges">
         <div class="challenge-container">
